<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/BottomAppBarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="8dp"

        app:fabCradleRoundedCornerRadius="30dp"
        app:hideOnScroll="true"
        app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
        app:menu="@menu/bottom_app_bar_menu"
        app:navigationIcon="@drawable/hamburger_icon">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/paint_brush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/paint_brush"
                android:src="@drawable/paint_brush"
                app:tint="@color/primaryTextColor" />

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Screen content -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/this_is_bottom_app_bar_basics"
            android:textAppearance="?attr/textAppearanceHeadline1" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="true"
            app:headerLayout="@layout/nav_drawer_header"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:menu="@menu/navigation_drawer" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/floating_action_bar_button"
        android:scaleType="center"
        android:src="@drawable/add"
        app:layout_anchor="@id/bottom_app_bar" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

